--- a/.github/source/tweak/tools.html.pug
+++ b/.github/source/tweak/tools.html.pug
@@ -27,8 +27,9 @@ block script
     |             lines.style.left = (rect[0].x - this.scrollLeft) + 'px';
     |             lines.style.top = (rect[0].y - this.scrollTop) + 'px';
     |         } else if (!value && (
-    |             '\n' === before.slice(-1) ||
-    |             '\n' === after.slice(0, 1)
+    |             !after ||
+    |             !before ||
+    |             '\n' === after.slice(0, 1) && '\n' === before.slice(-1)
     |         ) || null === editor.get()) {
     |             let rect = editor.rect();
     |             blocks.style.display = 'block';
