--- a/.github/source/index.html.pug
+++ b/.github/source/index.html.pug
@@ -85,7 +85,7 @@ block content
     h4 ECMAScript
     pre: code
       | import TE from '@taufik-nurrohman/text-editor';
-      | import {that: thatRect} from '@taufik-nurrohman/text-editor.rect';
+      | import {that as thatRect} from '@taufik-nurrohman/text-editor.rect';
       |
       | Object.assign(TE.prototype, thatRect);
     h2 Examples
