--- a/.github/source/tweak/tools.html.pug
+++ b/.github/source/tweak/tools.html.pug
@@ -1,7 +1,7 @@
 extends ../_index.pug
 
 block state
-  - const title = 'Tools \xB7 Text Editor Rect ' + version
+  - const title = 'Text Editor Rect'
   - const scripts = ['../../text-editor/index.min.js', '../index.min.js']
 
 block script
