--- a/.github/factory/index.html.pug
+++ b/.github/factory/index.html.pug
@@ -78,8 +78,8 @@ block content
       | &lt;/script&gt;
     h4 CommonJS
     pre: code
-      | const TE = require('@taufik-nurrohman/text-editor');
-      | const {that: thatRect} = require('@taufik-nurrohman/text-editor.rect');
+      | const TE = require('@taufik-nurrohman/text-editor').default;
+      | const {that: thatRect} = require('@taufik-nurrohman/text-editor.rect').default;
       |
       | Object.assign(TE.prototype, thatRect);
     h4 ECMAScript
