--- a/.factory/index.html.pug
+++ b/.factory/index.html.pug
@@ -6,7 +6,9 @@ block state
 
 block script
   script
-    | const editor = new TE(document.querySelector('textarea'));
+    | const editor = new TextEditor(document.querySelector('textarea'), {
+    |     with: [TextEditor.Rect]
+    | });
 
 block style
   style
@@ -15,8 +17,8 @@ block style
     | }
     | :root {
     |   background: #fff;
-    |   color: #000;
     |   border-top: 4px solid;
+    |   color: #000;
     |   font: normal normal 16px/1.25 serif;
     | }
     | a {
@@ -31,13 +33,13 @@ block style
     |   font-size: 80%;
     | }
     | footer, header, main, nav {
-    |   max-width: 700px;
     |   margin: 0 auto;
+    |   max-width: 700px;
     | }
     | hr {
     |   border: 0;
-    |   color: inherit;
     |   border-top: 1px dashed;
+    |   color: inherit;
     |   height: 0;
     | }
     | pre {
@@ -45,8 +47,8 @@ block style
     |   word-wrap: break-word;
     | }
     | pre code {
-    |   display: block;
     |   background: #eee;
+    |   display: block;
     |   padding: 1em;
     | }
     | table {
@@ -72,28 +74,30 @@ block content
       | &lt;script src="#[a(href='../text-editor/index.min.js' target='_blank') ./text-editor/index.min.js]"&gt;&lt;/script&gt;
       | &lt;script src="#[a(href='index.min.js' target='_blank') ./text-editor.rect/index.min.js]"&gt;&lt;/script&gt;
       | &lt;script&gt;
-      |   let editor = new TE(document.querySelector('textarea'));
+      |   const editor = new TextEditor(document.querySelector('textarea'), {
+      |       with: [TextEditor.Rect]
+      |   });
       | &lt;/script&gt;
     h4 CommonJS
     pre: code
-      | const TE = require('@taufik-nurrohman/text-editor').default;
-      | const {rect} = require('@taufik-nurrohman/text-editor.rect');
+      | const TextEditor = require('@taufik-nurrohman/text-editor').default;
+      | const Rect = require('@taufik-nurrohman/text-editor.rect').default;
       |
-      | TE.state.with.push(rect); // Load as a core extension
+      | TextEditor.state.with.push(Rect); // Load as a core extension
       |
-      | let editor = new TE(document.querySelector('textarea'), {
-      |         with: [rect] // Load as an optional extension
-      |     });
+      | const editor = new TextEditor(document.querySelector('textarea'), {
+      |     with: [Rect] // Load as an optional extension
+      | });
     h4 ECMAScript
     pre: code
-      | import TE from '@taufik-nurrohman/text-editor';
-      | import {rect} from '@taufik-nurrohman/text-editor.rect';
+      | import TextEditor from '@taufik-nurrohman/text-editor';
+      | import Rect from '@taufik-nurrohman/text-editor.rect';
       |
-      | TE.state.with.push(rect); // Load as a core extension
+      | TextEditor.state.with.push(Rect); // Load as a core extension
       |
-      | let editor = new TE(document.querySelector('textarea'), {
-      |         with: [rect] // Load as an optional extension
-      |     });
+      | const editor = new TextEditor(document.querySelector('textarea'), {
+      |     with: [Rect] // Load as an optional extension
+      | });
     h2 Examples
     ul
       li: a(href='tweak/caret.html' target='_blank') Custom Caret Example
