--- a/.factory/tweak/tools.html.pug
+++ b/.factory/tweak/tools.html.pug
@@ -6,7 +6,9 @@ block state
 
 block script
   script
-    | const editor = new TE(document.querySelector('textarea'));
+    | const editor = new TextEditor(document.querySelector('textarea'), {
+    |     with: [TextEditor.Rect]
+    | });
     | const blocks = document.querySelector('.tools-block');
     | const lines = document.querySelector('.tools-line');
     |
