--- a/.factory/tweak/caret.html.pug
+++ b/.factory/tweak/caret.html.pug
@@ -21,7 +21,9 @@ block script
     |             editor.mirror.style.visibility = this.checked ? 'visible' : 'hidden';
     |         }
     |     }
-    |     const editor = new TE(el);
+    |     const editor = new TextEditor(el, {
+    |         with: [TextEditor.Rect]
+    |     });
     |     let s = 'position:absolute;width:2px;z-index:9999;visibility:hidden;pointer-events:none;margin-left:-1px;';
     |     caret[0].style.cssText = s + 'background:red;';
     |     caret[1].style.cssText = s + 'background:blue;';
