--- a/.factory/index.html.pug
+++ b/.factory/index.html.pug
@@ -1,8 +1,10 @@
 extends _index.pug
 
 block state
-  - const title = 'Text Editor Rect ' + version
   - const scripts = ['../text-editor/index.min.js', 'index.min.js']
+  - const styles = ['../layout/index.min.css']
+  - const theme = '#000'
+  - const title = 'Text Editor: Rect ' + version
 
 block script
   script
@@ -12,51 +14,20 @@ block script
 
 block style
   style
-    | * {
-    |   box-sizing: border-box;
-    | }
     | :root {
-    |   background: #fff;
-    |   border-top: 4px solid;
-    |   color: #000;
-    |   font: normal normal 16px/1.25 serif;
+    |   border-top: 5px solid #00f;
     | }
-    | a {
-    |   color: #009;
-    |   text-decoration: none;
-    | }
-    | a, code {
-    |   word-wrap: break-word;
-    | }
-    | code {
-    |   font-family: monospace;
-    |   font-size: 80%;
-    | }
-    | footer, header, main, nav {
-    |   margin: 0 auto;
-    |   max-width: 700px;
-    | }
-    | hr {
-    |   border: 0;
-    |   border-top: 1px dashed;
-    |   color: inherit;
-    |   height: 0;
-    | }
-    | pre {
-    |   white-space: pre-wrap;
-    |   word-wrap: break-word;
-    | }
-    | pre code {
-    |   background: #eee;
-    |   display: block;
-    |   padding: 1em;
-    | }
-    | table {
-    |   width: 100%;
-    | }
-    | td, th {
-    |   text-align: left;
-    |   vertical-align: top;
+    |
+    | @media (min-width: 45rem) {
+    |   :root {
+    |     padding-bottom: 3rem;
+    |     padding-top: 3rem;
+    |   }
+    |   body > * {
+    |     margin-left: auto;
+    |     margin-right: auto;
+    |     max-width: 45rem;
+    |   }
     | }
 
 block content
@@ -66,8 +37,12 @@ block content
     hr
     p Provides a feature to get cursor position and selection dimension in pixels.
   main
-    p: textarea(spellcheck='false') abcdef
-    p: button(onclick='alert(JSON.stringify(editor.rect(), null, 2));') Inspect
+    p: textarea#in(placeholder!='Type something&hellip;' spellcheck='false' style={
+      'display': 'block',
+      'width': '100%',
+    }) abcdef
+    p(role='group')
+      button(onclick='alert(JSON.stringify(editor.rect(), null, 2));') Inspect
     h2 Usage
     h4 Browser
     pre: code
@@ -81,31 +56,31 @@ block content
     h4 CommonJS
     pre: code
       | const TextEditor = require('@taufik-nurrohman/text-editor').default;
-      | const Rect = require('@taufik-nurrohman/text-editor.rect').default;
+      | const TextEditorRect = require('@taufik-nurrohman/text-editor.rect').default;
       |
-      | TextEditor.state.with.push(Rect); // Load as a core extension
+      | TextEditor.state.with.push(TextEditorRect); // Load as a core extension
       |
       | const editor = new TextEditor(document.querySelector('textarea'), {
-      |     with: [Rect] // Load as an optional extension
+      |     with: [TextEditorRect] // Load as an optional extension
       | });
     h4 ECMAScript
     pre: code
       | import TextEditor from '@taufik-nurrohman/text-editor';
-      | import Rect from '@taufik-nurrohman/text-editor.rect';
+      | import TextEditorRect from '@taufik-nurrohman/text-editor.rect';
       |
-      | TextEditor.state.with.push(Rect); // Load as a core extension
+      | TextEditor.state.with.push(TextEditorRect); // Load as a core extension
       |
       | const editor = new TextEditor(document.querySelector('textarea'), {
-      |     with: [Rect] // Load as an optional extension
+      |     with: [TextEditorRect] // Load as an optional extension
       | });
     h2 Examples
     ul
       li: a(href='tweak/caret.html' target='_blank') Custom Caret Example
       li: a(href='tweak/tools.html' target='_blank') Floating Tools Example
     h2 Methods and Properties
-    h3 editor.mirror
+    h3: code editor.mirror
     p Return a #[code &lt;div&gt;] element that mirrors the #[code &lt;textarea&gt;] element.
-    h3 editor.rect(key)
+    h3: code editor.rect(key)
     p Get current selection offset and dimension data.
     pre: code
       | // [&lt;selection start&gt;, &lt;selection end&gt;, &lt;selection as rectangle&gt;, &lt;the editor&gt;]
