--- a/.factory/index.html.pug
+++ b/.factory/index.html.pug
@@ -39,7 +39,7 @@ block content
   main
     p: textarea#in(placeholder!='Type something&hellip;' spellcheck='false' style={
       'display': 'block',
-      'width': '100%',
+      'width': '100%'
     }) abcdef
     p(role='group')
       button(onclick='alert(JSON.stringify(editor.rect(), null, 2));') Inspect
