--- a/.factory/index.html.pug
+++ b/.factory/index.html.pug
@@ -14,17 +14,22 @@ block script
 
 block style
   style
+    | body {
+    |   margin-left: auto;
+    |   margin-right: auto;
+    |   max-width: 60rem;
+    | }
     | #out:empty {
     |   display: none;
     | }
 
 block content
   header
-    h1
-      a(href='../text-editor/index.html') &laquo;
-      = ' ' + title
-    p Rect extension for #[a(href='../text-editor/index.html') Text Editor]. This extension provides a feature to get cursor position and selection dimension in pixels.
-    hr
+    hgroup
+      h1
+        a(href='../text-editor/index.html') &laquo;
+        = ' ' + title
+      p This extension provides a feature to get cursor position and selection dimension in pixels.
   main
     p: textarea#in(placeholder!='Content goes here&hellip;' spellcheck='false' style={
       'display': 'block',
@@ -33,7 +38,9 @@ block content
     p(role='group')
       button(onclick='document.querySelector(\'#out\').textContent = JSON.stringify(editor.rect(), null, 2);') Inspect
     pre#out
-    h2 Usage
+    h2#usage
+      a(href='#usage') #
+      = ' Usage'
     h4 Browser
     pre: code
       | &lt;script src="#[a(href='../text-editor/index.min.js' target='_blank') ./text-editor/index.min.js]"&gt;&lt;/script&gt;
@@ -63,17 +70,23 @@ block content
       | const editor = new TextEditor(document.querySelector('textarea'), {
       |     with: [TextEditorRect] // Load as an optional extension
       | });
-    h2 Examples
+    h2#tweaks
+      a(href='#tweaks') #
+      = ' Tweaks'
     ul
       li: a(href='tweak/caret.html' target='_blank') Custom Caret
       li: a(href='tweak/tools.html' target='_blank') Floating Tools
-    h2 Methods
+    h2#methods
+      a(href='#methods') #
+      = ' Methods'
     h3 Instance Methods
     h4: code editor.rect(key)
     p Get current selection offset and dimension data.
     pre: code
       | console.log(editor.rect()); // [start, end, selection, editor]
-    h2 Properties
+    h2#properties
+      a(href='#properties') #
+      = ' Properties'
     h3 Instance Properties
     h4: code editor.mirror
     p Return a #[code &lt;div&gt;] element that mirrors the #[code &lt;textarea&gt;] element.
