--- a/.factory/index.html.pug
+++ b/.factory/index.html.pug
@@ -19,6 +19,9 @@ block style
     |   margin-right: auto;
     |   max-width: 60rem;
     | }
+    | #out {
+    |   font-family: monospace;
+    | }
     | #out:empty {
     |   display: none;
     | }
