--- a/.factory/tweak/caret.html.pug
+++ b/.factory/tweak/caret.html.pug
@@ -28,37 +28,37 @@ block script
     |     caret[0].style.cssText = s + 'background:red;';
     |     caret[1].style.cssText = s + 'background:blue;';
     |     function setCaretPosition() {
-    |         let $ = editor.$(),
-    |             rect = editor.rect(),
-    |             e = editor.self,
-    |             h = parseFloat(window.getComputedStyle(editor.self).getPropertyValue('line-height'));
-    |         caret[0].style.top = (rect[0].y - e.scrollTop) + 'px';
-    |         caret[0].style.left = (rect[0].x - e.scrollLeft) + 'px';
+    |         let $ = this.$(),
+    |             rect = this.rect(),
+    |             e = this.self,
+    |             h = parseFloat(window.getComputedStyle(e).getPropertyValue('line-height'));
+    |         caret[0].style.top = rect[0].y + 'px';
+    |         caret[0].style.left = rect[0].x + 'px';
     |         caret[0].style.height = h + 'px';
     |         caret[0].style.marginTop = '-' + ((h - rect[0].h) / 2) + 'px';
     |         caret[1].style.visibility = $.length ? 'visible' : 'hidden';
-    |         caret[1].style.top = (rect[1].y - e.scrollTop) + 'px';
-    |         caret[1].style.left = (rect[1].x - e.scrollLeft) + 'px';
+    |         caret[1].style.top = rect[1].y + 'px';
+    |         caret[1].style.left = rect[1].x + 'px';
     |         caret[1].style.height = h + 'px';
     |         caret[1].style.marginTop = '-' + ((h - rect[1].h) / 2) + 'px';
     |         toggleMirror.call(checkBox);
     |     }
     |     checkBox.onchange = toggleMirror;
-    |     editor.self.onfocus = () => {
-    |         caret[0].style.visibility = 'visible';
-    |         caret[1].style.visibility = 'visible';
-    |         setCaretPosition();
-    |     };
-    |     editor.self.onblur = () => {
+    |     editor.on('blur', function () {
     |         caret[0].style.visibility = 'hidden';
     |         caret[1].style.visibility = 'hidden';
-    |     };
-    |     ['scroll', 'resize', 'keydown', 'cut', 'paste', 'mousedown', 'mouseup', 'select'].forEach(event => {
-    |         editor.self.addEventListener(event, e => {
-    |             setTimeout(setCaretPosition, 1);
-    |         }, false);
     |     });
-    |     editor.self.addEventListener('mousemove', setCaretPosition, false);
+    |     editor.on('focus', function () {
+    |         caret[0].style.visibility = 'visible';
+    |         caret[1].style.visibility = 'visible';
+    |         setCaretPosition.call(this);
+    |     });
+    |     ['scroll', 'resize', 'key.down', 'cut', 'paste', 'caret.down', 'caret.up', 'select'].forEach(event => {
+    |         editor.on(event, function () {
+    |             setTimeout(() => setCaretPosition.call(this), 1);
+    |         });
+    |     });
+    |     editor.on('caret.move', setCaretPosition);
     | }
     |
     | run(document.querySelector('textarea'));
