--- a/.factory/index.html.pug
+++ b/.factory/index.html.pug
@@ -84,7 +84,7 @@ block content
       = ' Methods'
     h3 Instance Methods
     h4: code editor.rect(key)
-    p Get current selection offset and dimension data.
+    p Gets current selection offset and dimension data.
     pre: code
       | console.log(editor.rect()); // [start, end, selection, editor]
     h2#properties
@@ -92,7 +92,7 @@ block content
       = ' Properties'
     h3 Instance Properties
     h4: code editor.mirror
-    p Return a #[code &lt;div&gt;] element that mirrors the #[code &lt;textarea&gt;] element.
+    p Returns the #[code &lt;div&gt;] element that mirrors the #[code &lt;textarea&gt;] element.
   footer
     hr
     p
